--- a/css/styles.css
+++ b/css/styles.css
@@ -229,6 +229,8 @@ img {
 
 
 .portfolio-card {
+	margin: 8px;
+	width: calc((100%-24px) / 3);
 	border: 1px solid var(--secondary-text-color);
 	width: 370px;
 }
@@ -240,9 +242,9 @@ img {
 	border-right: 1px solid #eeeeee;
 }
 
-.gallery-list > .item {
+/* .gallery-list > .item {
 	margin-bottom: 30px;
-}
+} */
 
 .card-title {
 	color: var(--primary-text-color);
